new  css and subject field
New Css and added subject field and extra message section. Limited
subject field to 13 characters as per eztexting restrictions

--- a/style/body.css
+++ b/style/body.css
@@ -39,3 +39,21 @@ textarea{
 color: red;	
 font-size: 2em;
 }
+
+#message{
+	width:960px;
+	height:350px;
+}
+#xtramsg{
+	width:960px;
+	height:175px;
+}
+.subject
+{
+color: red;
+}
+#subjectinput
+{
+	width:960px;
+	height: 30px;
+}
